# rusqlite

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CONTRIBUTORS.md  Cargo.toml  Changelog.md  LICENSE  README.md  appveyor.yml  bindings.md  clippy.toml  codecov.yml  grcov.sh  rustfmt.toml
.github/workflows/: main.yml
benches/: borrowing_stmt.rs  cache.rs  exec.rs
dummy-embedded-extension/: .gitignore  Cargo.toml  build.rs  integration-test.sh
dummy-embedded-extension/dummy-c-host-extension/: dummy_c_host_extension.c
dummy-embedded-extension/src/: lib.rs
dummy-extension/: Cargo.toml  integration-test.sh
dummy-extension/src/: lib.rs
example-embedded-extension/: .gitignore  Cargo.toml  build.rs  integration-test.sh
example-embedded-extension/example-c-host-extension/: example_c_host_extension.c
example-embedded-extension/src/: lib.rs
example-extension/: Cargo.toml  integration-test.sh
example-extension/src/: lib.rs
examples/: load_extension.rs  loadable_extension.rs  owning_rows.rs  owning_statement.rs
examples/intro_sqlite_collate_list/: README.md  main.rs
examples/intro_sqlite_compileoptions/: README.md  main.rs
examples/intro_sqlite_function_list/: README.md  main.rs
examples/intro_sqlite_ids_stmt/: README.md  main.rs
examples/intro_sqlite_module_list/: README.md  main.rs
examples/intro_sqlite_pragma_list/: README.md  main.rs
examples/intro_sqlite_version_api/: README.md  main.rs
examples/intro_sqlite_version_number_api/: README.md  main.rs
examples/intro_sqlite_version_stmt/: README.md  main.rs
examples/persons/: README.md  main.rs
examples/with_chrono/: Cargo.toml  README.md
examples/with_chrono/src/: main.rs
libsqlite3-sys/: Cargo.toml  build.rs  upgrade.sh  upgrade_sqlcipher.sh  upgrade_sqlite3mc.sh
libsqlite3-sys/bindgen-bindings/: README.md  bindgen_3.13.0-ext-embed.rs  bindgen_3.13.0-ext.rs  bindgen_3.13.0.rs  bindgen_3.14.0.rs  bindgen_3.14.0_ext.rs  bindgen_3.20.0-ext-embed.rs  bindgen_3.20.0-ext.rs  bindgen_3.20.0.rs  bindgen_3.26.0-ext-embed.rs  bindgen_3.26.0-ext.rs  bindgen_3.34.1.rs  bindgen_3.34.1_ext.rs  bindgen_3.6.23-ext-embed.rs  bindgen_3.6.23-ext.rs  bindgen_3.6.23.rs  bindgen_3.6.8-ext-embed.rs  bindgen_3.6.8-ext.rs  bindgen_3.6.8.rs  bindgen_3.7.16-ext-embed.rs  bindgen_3.7.16-ext.rs  bindgen_3.7.16.rs  bindgen_3.7.7-ext-embed.rs  bindgen_3.7.7-ext.rs  bindgen_3.7.7.rs  generate-bindgen-bindings.sh
libsqlite3-sys/sqlcipher/: bindgen_bundled_version.rs  ctx_free.patch  sqlcipher.h  sqlite3.h
libsqlite3-sys/sqlite3/: bindgen_bundled_version-ext-embed.rs  bindgen_bundled_version-ext.rs  bindgen_bundled_version.rs  bindgen_bundled_version_ext.rs  wasm-ext.c
libsqlite3-sys/sqlite3/wasm32-unknown-unknown/include/: assert.h  math.h  stdio.h  stdlib.h  string.h
libsqlite3-sys/sqlite3/wasm32-unknown-unknown/libc/stdlib/: qsort.c
libsqlite3-sys/sqlite3/wasm32-unknown-unknown/libc/string/: strcmp.c  strcspn.c  strlen.c  strncmp.c  strrchr.c  strspn.c
libsqlite3-sys/sqlite3mc/: bindgen_bundled_version.rs  sqlite3.h
libsqlite3-sys/src/: bindgen.rs  error.rs  lib.rs  loadable_extension.rs  sqlcipher_custom_crypto.rs  wasm32_unknown_unknown.rs
libsqlite3-sys/src/memvfs/: file_io.rs  helpers.rs  mod.rs  vfs.rs
libsqlite3-sys/wasm-include/: __header_time.h  stdio.h  stdlib.h  string.h  time.h
libsqlite3-sys/wasm-include/bits/: alltypes.h
rusqlite-macros/: Cargo.toml
rusqlite-macros/src/: lib.rs
rusqlite-macros/tests/: test.rs
rusqlite-test-helper/: Cargo.toml
rusqlite-types/: Cargo.toml
rusqlite-types/src/: from_sql.rs  lib.rs  to_sql.rs  value_ref.rs
sqlcipher-crypto-provider/: Cargo.toml
sqlcipher-crypto-provider/src/: lib.rs
src/: auto_extension.rs  backup.rs  bind.rs  busy.rs  cache.rs  collation.rs  column.rs  config.rs  context.rs  convenient.rs  deserialize.rs  error.rs  functions.rs  hooks.rs  inner_connection.rs  lib.rs  limits.rs  load_extension_guard.rs  params.rs  pragma.rs  raw_statement.rs  regexp_fn.rs  row.rs  serialize.rs  session.rs  statement.rs  trace.rs  transaction.rs  types.rs  unlock_notify.rs
src/blob/: mod.rs  pos_io.rs
src/deserialize/: mem_file.rs  mod.rs
src/ffi/: bindgen.rs
src/hooks/: mod.rs  preupdate_hook.rs
src/types/: camino.rs  chrono.rs  decimal.rs  from_sql.rs  jiff.rs  mod.rs  pathbuf.rs  serde_json.rs  smallstr.rs  time.rs  to_sql.rs  url.rs  value.rs  value_ref.rs
src/util/: mod.rs  param_cache.rs  small_cstr.rs  sqlite_string.rs  thin_box_any.rs
src/vfs/: memvfs.rs  mod.rs
src/vtab/: array.rs  csvtab.rs  mod.rs  series.rs  value_pointer.rs  vtablog.rs
tests/: auto_ext.rs  config_log.rs  deny_single_threaded_sqlite_config.rs  vtab.rs  wasm.rs  wasm_pack.rs
