[package]
name = "rusqlite"
version = "0.0.11"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
description = "Ergonomic wrapper for SQLite"
repository = "https://github.com/jgallagher/rusqlite"
documentation = "http://www.rust-ci.org/jgallagher/rusqlite/doc/rusqlite/"
readme = "README.md"
keywords = ["sqlite", "database", "ffi"]
license = "MIT"

[lib]
name = "rusqlite"

[features]
load_extension = ["libsqlite3-sys/load_extension"]

[dependencies]
time = "*"
bitflags = "*"

[dependencies.libsqlite3-sys]
path = "libsqlite3-sys"
