[package]
name = "rusqlite"
# Note: Update version in README.md when you change this.
version = "0.37.0"
authors = ["The rusqlite developers"]
edition = "2021"
description = "Ergonomic wrapper for SQLite"
repository = "https://github.com/rusqlite/rusqlite"
documentation = "https://docs.rs/rusqlite/"
readme = "README.md"
keywords = ["sqlite", "database", "ffi"]
license = "MIT"
categories = ["database"]

exclude = [
    "/.github/*",
    "/.gitattributes",
    "/appveyor.yml",
    "/Changelog.md",
    "/clippy.toml",
    "/codecov.yml",
]

[badges]
appveyor = { repository = "rusqlite/rusqlite" }
codecov = { repository = "rusqlite/rusqlite" }
maintenance = { status = "actively-developed" }

[lib]
name = "rusqlite"

[workspace]
members = ["libsqlite3-sys"]

[features]
# if not SQLITE_OMIT_LOAD_EXTENSION
load_extension = []
# hot-backup interface: 3.6.11 (2009-02-18)
backup = []
# if not SQLITE_OMIT_INCRBLOB
# sqlite3_blob_reopen: 3.7.4
blob = []
collation = []
# sqlite3_create_function_v2: 3.7.3 (2010-10-08)
functions = []
# sqlite3_log: 3.6.23 (2010-03-09)
trace = []
bundled = ["libsqlite3-sys/bundled", "modern_sqlite"]
bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher", "bundled"]
bundled-sqlcipher-vendored-openssl = [
    "libsqlite3-sys/bundled-sqlcipher-vendored-openssl",
    "bundled-sqlcipher",
]
buildtime_bindgen = ["libsqlite3-sys/buildtime_bindgen"]
limits = []
loadable_extension = ["libsqlite3-sys/loadable_extension"]
hooks = []
# if SQLITE_ENABLE_PREUPDATE_HOOK
preupdate_hook = ["libsqlite3-sys/preupdate_hook", "hooks"]
i128_blob = []
sqlcipher = ["libsqlite3-sys/sqlcipher"]
# SQLITE_ENABLE_UNLOCK_NOTIFY
unlock_notify = ["libsqlite3-sys/unlock_notify"]
# if not SQLITE_OMIT_VIRTUALTABLE
# xSavepoint, xRelease and xRollbackTo: 3.7.7 (2011-06-23)
vtab = []
csvtab = ["csv", "vtab"]
# pointer passing interfaces: 3.20.0
array = ["vtab", "modern_sqlite"]
# if SQLITE_ENABLE_SESSION
# session extension: 3.13.0
session = ["libsqlite3-sys/session", "hooks"]
# if not SQLITE_OMIT_WINDOWFUNC
# window functions: 3.25.0
window = ["functions", "modern_sqlite"]
# 3.9.0
series = ["vtab"]
# check for invalid query.
extra_check = []
# ]3.14.0, last]
modern_sqlite = ["libsqlite3-sys/bundled_bindings"]
in_gecko = ["modern_sqlite", "libsqlite3-sys/in_gecko"]
bundled-windows = ["libsqlite3-sys/bundled-windows"]
# Build bundled sqlite with -fsanitize=address
with-asan = ["libsqlite3-sys/with-asan"]
# if SQLITE_ENABLE_COLUMN_METADATA
column_metadata = ["libsqlite3-sys/column_metadata"]
# if not SQLITE_OMIT_DECLTYPE
column_decltype = []
wasm32-wasi-vfs = ["libsqlite3-sys/wasm32-wasi-vfs"]
# if not SQLITE_OMIT_DESERIALIZE
# 3.23.0
serialize = ["modern_sqlite"]

# Helper feature for enabling most non-build-related optional features
# or dependencies (except `session`). This is useful for running tests / clippy
# / etc. New features and optional dependencies that don't conflict with anything
# else should be added here.
modern-full = [
    "array",
    "backup",
    "blob",
    "modern_sqlite",
    "chrono",
    "collation",
    "column_metadata",
    "column_decltype",
    "csvtab",
    "extra_check",
    "functions",
    "hooks",
    "i128_blob",
    "jiff",
    "limits",
    "load_extension",
    "serde_json",
    "serialize",
    "series",
    "time",
    "trace",
    "unlock_notify",
    "url",
    "uuid",
    "vtab",
    "window",
]

bundled-full = ["modern-full", "bundled"]

[dependencies]
# Jiff Date/Time/Timestamp persistence
jiff = { version = "0.2", optional = true, default-features = false, features = [
    "std",
] }
# Date/Time/Timestamp persistence
time = { version = "0.3.36", features = [
    "formatting",
    "macros",
    "parsing",
], optional = true }
bitflags = "2.6.0"
# LRU cache of statement
hashlink = "0.10"
# Chrono Date/Time/Timestamp persistence
chrono = { version = "0.4.38", optional = true, default-features = false, features = [
    "clock",
] }
# JSON persistence
serde_json = { version = "1.0", optional = true }
# Virtual table
csv = { version = "1.1", optional = true }
# Url persistence
url = { version = "2.1", optional = true }
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
# Uuid persistence
uuid = { version = "1.0", optional = true }
smallvec = "1.6.1"
# WIP comptime checks
rusqlite-macros = { path = "rusqlite-macros", version = "0.4.1", optional = true }

[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1.0"
regex = "1.5.5"
uuid = { version = "1.0", features = ["v4"] }
unicase = "2.6.0"
self_cell = "1.1.0"
# Use `bencher` over criterion because it builds much faster,
# and we don't have many benchmarks
bencher = "0.1"

[dependencies.libsqlite3-sys]
path = "libsqlite3-sys"
version = "0.35.0"

[[test]]
name = "auto_ext"

[[test]]
name = "config_log"
harness = false

[[test]]
name = "deny_single_threaded_sqlite_config"

[[test]]
name = "vtab"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "exec"
harness = false

[[example]]
name = "loadable_extension"
crate-type = ["cdylib"]
required-features = ["loadable_extension", "functions", "trace"]

[[example]]
name = "load_extension"
required-features = ["load_extension", "bundled", "functions", "trace"]

[package.metadata.docs.rs]
features = ["modern-full", "rusqlite-macros"]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["bundled-full"]
all-features = false
