[package]
name = "rusqlite"
# Note: Update version in README.md when you change this.
version = "0.38.0"
authors = ["The rusqlite developers"]
edition = "2021"
description = "Ergonomic wrapper for SQLite"
repository = "https://github.com/rusqlite/rusqlite"
documentation = "https://docs.rs/rusqlite/"
readme = "README.md"
keywords = ["sqlite", "database", "ffi"]
license = "MIT"
categories = ["database"]

exclude = [
    "/.github/*",
    "/.gitattributes",
    "/appveyor.yml",
    "/Changelog.md",
    "/clippy.toml",
    "/codecov.yml",
    "**/*.sh",
]

[badges]
appveyor = { repository = "rusqlite/rusqlite" }
codecov = { repository = "rusqlite/rusqlite" }
maintenance = { status = "actively-developed" }

[lib]
name = "rusqlite"

[workspace]
members = ["libsqlite3-sys"]

[features]
# if not SQLITE_OMIT_LOAD_EXTENSION
load_extension = []
# hot-backup interface
backup = []
# if not SQLITE_OMIT_INCRBLOB
# sqlite3_blob
blob = []
# Prepared statements cache by connection (like https://www.sqlite.org/tclsqlite.html#cache)
cache = ["hashlink"]
# sqlite3_create_collation_v2
collation = []
# sqlite3_create_function_v2
functions = []
# sqlite3_log / sqlite3_trace_v2
trace = []
# Use bundled SQLite sources (instead of the one provided by your OS / distribution)
bundled = ["libsqlite3-sys/bundled", "modern_sqlite"]
# Use SQLCipher instead of SQLite
bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher", "bundled"]
bundled-sqlcipher-vendored-openssl = [
    "libsqlite3-sys/bundled-sqlcipher-vendored-openssl",
    "bundled-sqlcipher",
]
buildtime_bindgen = ["libsqlite3-sys/buildtime_bindgen", "sqlite-wasm-rs/bindgen"]
# sqlite3_limit
limits = []
# Used to generate a cdylib
loadable_extension = ["libsqlite3-sys/loadable_extension"]
# sqlite3_commit_hook, sqlite3_rollback_hook, ...
hooks = []
# if SQLITE_ENABLE_PREUPDATE_HOOK
preupdate_hook = ["libsqlite3-sys/preupdate_hook", "hooks"]
# u64, usize, NonZeroU64, NonZeroUsize
fallible_uint = []
i128_blob = []
sqlcipher = ["libsqlite3-sys/sqlcipher"]
# SQLITE_ENABLE_UNLOCK_NOTIFY
unlock_notify = ["libsqlite3-sys/unlock_notify"]
# if not SQLITE_OMIT_VIRTUALTABLE
# sqlite3_vtab
vtab = []
csvtab = ["csv", "vtab"]
# Port of Carray() table-valued function
array = ["vtab"]
# if SQLITE_ENABLE_SESSION
# session extension
session = ["libsqlite3-sys/session", "hooks"]
# if not SQLITE_OMIT_WINDOWFUNC
# sqlite3_create_window_function
window = ["functions"]
# Port of generate_series table-valued function
series = ["vtab"]
# check for invalid query.
extra_check = []
# ]3.34.1, last]
modern_sqlite = ["libsqlite3-sys/bundled_bindings"]
in_gecko = ["modern_sqlite", "libsqlite3-sys/in_gecko"]
bundled-windows = ["libsqlite3-sys/bundled-windows"]
# Build bundled sqlite with -fsanitize=address
with-asan = ["libsqlite3-sys/with-asan"]
# if SQLITE_ENABLE_COLUMN_METADATA
column_metadata = ["libsqlite3-sys/column_metadata"]
# if not SQLITE_OMIT_DECLTYPE
column_decltype = []
wasm32-wasi-vfs = ["libsqlite3-sys/wasm32-wasi-vfs"]
# if not SQLITE_OMIT_DESERIALIZE
serialize = []

# Helper feature for enabling most non-build-related optional features
# or dependencies (except `session`). This is useful for running tests / clippy
# / etc. New features and optional dependencies that don't conflict with anything
# else should be added here.
modern-full = [
    "array",
    "backup",
    "blob",
    "modern_sqlite",
    "chrono",
    "collation",
    "column_metadata",
    "column_decltype",
    "csvtab",
    "extra_check",
    "functions",
    "hooks",
    "i128_blob",
    "jiff",
    "limits",
    "load_extension",
    "serde_json",
    "serialize",
    "series",
    "time",
    "trace",
    "unlock_notify",
    "url",
    "uuid",
    "vtab",
    "window",
]

bundled-full = ["modern-full", "bundled"]
default = ["cache"]

[dependencies]
# Jiff Date/Time/Timestamp persistence
jiff = { version = "0.2", optional = true, default-features = false, features = [
    "std",
] }
# Date/Time/Timestamp persistence
time = { version = "0.3.47", features = [
    "formatting",
    "macros",
    "parsing",
], optional = true }
bitflags = "2.6.0"
# LRU cache of statement
hashlink = { version = "0.11", optional = true }
# Chrono Date/Time/Timestamp persistence
chrono = { version = "0.4.38", optional = true, default-features = false, features = [
    "clock",
] }
# JSON persistence
serde_json = { version = "1.0", optional = true }
# Virtual table
csv = { version = "1.1", optional = true }
# Url persistence
url = { version = "2.1", optional = true }
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
# Uuid persistence
uuid = { version = "1.0", optional = true }
smallvec = "1.6.1"
# WIP comptime checks
rusqlite-macros = { path = "rusqlite-macros", version = "0.4.2", optional = true }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
libsqlite3-sys = { path = "libsqlite3-sys", version = "0.36.0" }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
sqlite-wasm-rs = { version = "0.5.1", default-features = false }
chrono = { version = "0.4.38", optional = true, default-features = false, features = ["wasmbind"] }
jiff = { version = "0.2", optional = true, default-features = false, features = ["js"] }
time = { version = "0.3.47", optional = true, features = ["wasm-bindgen"] }
uuid = { version = "1.0", optional = true, features = ["js"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
# Something is dependent on them, we use feature to override it.
uuid = { version = "1.0", features = ["js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
wasm-bindgen-test = "0.3.54"
wasm-bindgen = "0.2.104"

[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1.0"
regex = "1.5.5"
uuid = { version = "1.0", features = ["v4"] }
unicase = "2.6.0"
self_cell = "1.1.0"
# Use `bencher` over criterion because it builds much faster,
# and we don't have many benchmarks
bencher = "0.1"

[[test]]
name = "auto_ext"

[[test]]
name = "config_log"
harness = false

[[test]]
name = "deny_single_threaded_sqlite_config"

[[test]]
name = "vtab"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "exec"
harness = false

[[example]]
name = "loadable_extension"
crate-type = ["cdylib"]
required-features = ["loadable_extension", "functions", "trace"]

[[example]]
name = "load_extension"
required-features = ["load_extension", "bundled", "functions", "trace"]

[package.metadata.docs.rs]
features = ["modern-full", "rusqlite-macros"]
all-features = false
no-default-features = false
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["bundled-full"]
all-features = false
