[package]
name = "dummy-extension"
version = "0.0.1"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
edition = "2018"
repository = "https://github.com/jgallagher/rusqlite"
description = "Dummy extension"
license = "MIT"
keywords = ["sqlite", "extension"]

[dependencies.rusqlite]
path = ".."
default-features = false
features = ["loadable_extension", "vtab"]
version = "0.21.0"
