[package]
name = "example-embedded-extension"
version = "0.0.1"
authors = ["The rusqlite developers"]
edition = "2018"
repository = "https://github.com/rusqlite/rusqlite"
description = "Example embedded extension to demonstrate and test rusqlite feature loadable_extension_embedded"
license = "MIT"
keywords = ["sqlite", "extension"]

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.rusqlite]
path = ".."
default-features = false
features = ["loadable_extension_embedded", "vtab", "functions", "bundled"]

[build-dependencies]
cbindgen = "0.18.0"

[workspace]
members = []
