[package]
name = "libsqlite3-sys"
version = "0.23.2"
authors = ["The rusqlite developers"]
edition = "2018"
repository = "https://github.com/rusqlite/rusqlite"
description = "Native bindings to the libsqlite3 library"
license = "MIT"
links = "sqlite3"
build = "build.rs"
keywords = ["sqlite", "sqlcipher", "ffi"]
categories = ["external-ffi-bindings"]

[features]
default = ["min_sqlite_version_3_6_8"]
bundled = ["cc", "bundled_bindings"]
bundled-windows = ["cc", "bundled_bindings"]
bundled-sqlcipher = ["bundled"]
bundled-sqlcipher-vendored-openssl = ["bundled-sqlcipher", "openssl-sys/vendored"]
buildtime_bindgen = ["bindgen", "pkg-config", "vcpkg"]
loadable_extension = ["proc-macro2", "regex", "syn", "quote", "version-compare", "which"]
loadable_extension_embedded = ["loadable_extension", "lazy_static"]
sqlcipher = []
min_sqlite_version_3_6_8 = ["pkg-config", "vcpkg"]
min_sqlite_version_3_6_23 = ["pkg-config", "vcpkg"]
min_sqlite_version_3_7_7 = ["pkg-config", "vcpkg"]
min_sqlite_version_3_7_16 = ["pkg-config", "vcpkg"]
# Bundle only the bindings file. Note that this does nothing if
# `buildtime_bindgen` is enabled.
bundled_bindings = []
# sqlite3_unlock_notify >= 3.6.12
unlock_notify = []
# 3.13.0
preupdate_hook = ["buildtime_bindgen"]
# 3.13.0
session = ["preupdate_hook", "buildtime_bindgen"]
in_gecko = []
with-asan = []
wasm32-wasi-vfs = []
# lowest version shipped with Windows 10.0.10586 was 3.8.8.3
winsqlite3 = ["min_sqlite_version_3_7_16"]

[dependencies]
lazy_static = { version = "1.4", optional = true }
openssl-sys = { version = "0.9", optional = true }

[build-dependencies]
bindgen = { version = "0.59", optional = true, default-features = false, features = ["runtime"] }
cc = { version = "1.0", optional = true }
pkg-config = { version = "0.3.19", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
regex = { version = "1.5", optional = true }
syn = { version = "1.0", features = ["extra-traits", "full", "printing"], optional = true }
vcpkg = { version = "0.2", optional = true }
version-compare = { version = "0.1", optional = true }
which = { version = "4.0.2", optional = true }
