[package]
name = "sqlite_rust"
version = "0.1.0"
authors = ["steadylearner <32325099+steadylearner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"

[dependencies.rusqlite]
version = "0.21.0"
features = ["chrono"]

